Bug 558410 - silence strict aliasing warnings (r=jorendorff)